--- a/src/templates/view.html
+++ b/src/templates/view.html
@@ -6,7 +6,7 @@
   {% block createnew %}
     <div class='d-flex'>
       {# TODO replace 'entry' with experiment|item #}
-      <div class='align-self-center'><h3>{{ Entity.page|capitalize }} > {{ 'Viewing an entry'|trans }}</h3></div>
+      <div class='align-self-center'><h3>{{ Entity.entityType.toPage[:-4]|capitalize|trans }} > {{ 'Viewing an entry'|trans }}</h3></div>
       <div class='ml-auto'>
         {% include 'create-new.html' %}
       </div>
@@ -51,7 +51,7 @@
   {% if Entity.entityData.custom_id %}
     <span title='{{ 'Custom ID'|trans }}' class='custom-id-badge'>{{ Entity.entityData.custom_id }}</span>
   {% endif %}
-  <span id='documentTitle' class='breakable malleableColumn hl-hover-gray rounded py-1' data-target='title' data-endpoint='{{ Entity.type }}' data-id='{{ Entity.id }}'>{{ Entity.entityData.title }}</span>
+  <span id='documentTitle' class='breakable malleableColumn hl-hover-gray rounded py-1' data-target='title' data-endpoint='{{ Entity.entityType.value }}' data-id='{{ Entity.id }}'>{{ Entity.entityData.title }}</span>
   </h1>
 
   {% include('catstat-view.html') %}
@@ -175,7 +175,7 @@
 
 <div id='info'
     data-page='view'
-    data-type='{{ Entity.type }}'
+    data-type='{{ Entity.entityType.value }}'
     data-id='{{ Entity.id }}'
     data-team='{{ App.Users.userData.team }}'
     data-isanon='{{ App.Session.get('is_anon') }}'
