Addition of exclusive edit mode for all entities (#5127)
* refactor and reformat Templates SQL

* remove AbstractEntity->type and AbstractEntity->page
include it into Enums\EntityType, add getPage() method

* also change templates

* EntityType getPage method renamed to toPage()
It returns file, extension, and query string if necessary
adjust codebase accordingly

* getPage use entityType->value, use getPage in submodels

* add an enumeration for the api submodels and use it in ApivController.php

* add getNewIdFromPostRequest() to consolidate how api post requests are processed.

* always add hash part of url via Tab.class.ts
it prevents jumping to top of page when working with resources categories in the admin panel

* no need to wrap the formatting in a function
put it at the end of the insert callback

* ﻿rename getPage to getApiPath
to avoid confusion with actual front end pages like experiments.php, ucp.php, ...

* move some function out of AbstractEntity and into AbstractConcreteEntity

* add db schema changes

* exclusive edit mode

* exclusive edit mode for all entities
not only items and experiments

* update sql schema

* exclusive edit mode for all entities

* update apidoc

* ﻿exclusive edit mode for all entities

* fix the schema update and remove empty api spec

* remove sysadmin from the logic

sysadmin right should not have an impact on exclusive lock logic

* simplify the openapi

---------

Co-authored-by: Nicolas CARPi <nico-git@deltablot.email>

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1518,3 +1518,30 @@ input:checked + .slider::before {
     color: #ffe6b8; /* Less bright orange */
   }
 }
+
+#exclusiveEditModeBtn {
+    span {
+        height: 1rem;
+        line-height: 1rem;
+        width: 1.25rem;
+
+        i:first-child {
+            top: -1.7px;
+        }
+
+        .fa-lock-open {
+            left: -2px;
+        }
+
+        .fa-lock {
+            left: -4px;
+        }
+
+        .fa-pen-nib {
+            --fa-rotate-angle: 45deg;
+            color:var(--primary);
+            left: 2px;
+            top: 4px;
+        }
+    }
+}
