add option to always display own entries
some users reported issues with the change introduced in 5.0 where
entries from other teams the user belonged were no longer shown. One
workaround was to add themselves in the "users" part of canread, and
then use scope::everything, but a better approach is to have a user
setting to toggle this behavior. It's off by default, but when switched
on, entries from current user will always be listed, regardless of the
team in which they are currently logged in.

--- a/src/templates/ucp.html
+++ b/src/templates/ucp.html
@@ -275,6 +275,15 @@
         </button>
       </div>
     </div>
+    <hr>
+
+    <div class='d-flex justify-content-between'>
+      <label for='always_show_owned' class='col-form-label'>{{ 'Always display your own entries, regardless of the current team'|trans }}</label>
+      <label class='switch ucp-align'>
+        <input type='checkbox' data-trigger='change' data-model='users/me' data-target='always_show_owned' {{ App.Users.userData.always_show_owned == 1 ? 'checked="checked"' }} id='always_show_owned'>
+        <span class='slider'></span>
+      </label>
+    </div>
   </div>
 
 </div>
