change how highlighted steps are highlighted
change from background color to border + color because a finished step
would be unreadable, being green and all

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -813,8 +813,7 @@ tr:nth-child(odd) {
 
 /* for steps highlight, because .active only works on list-group-item */
 .highlighted {
-    background-color: $elabblue;
-    color: $white;
+    border: 1px solid $elabblue;
 }
 
 .item-next {
