--- a/src/templates/admin.html
+++ b/src/templates/admin.html
@@ -26,6 +26,7 @@
   <li><button type='button' class='btn' data-action='switch-tab' data-tabtarget='5'>{% trans %}Status{% plural 2 %}Status{% endtrans %}</button></li>
   <li><button type='button' class='btn' data-action='switch-tab' data-tabtarget='6'>{{ 'Export'|trans }}</button></li>
   <li><button type='button' class='btn' data-action='switch-tab' data-tabtarget='7'>{{ 'Tag manager'|trans }}</button></li>
+  <li><button type='button' class='btn' data-action='switch-tab' data-tabtarget='8'>{{ 'Batch actions'|trans }}</button></li>
 </ul>
 
 {# loading spinner #}
@@ -617,6 +618,153 @@
           {% endfor %}
         </tbody>
       </table>
+    </div>
+  </div>
+</div>
+
+{# TAB 8 BATCH ACTIONS #}
+<div data-tabcontent='8' id='batchActions' hidden>
+  <p>{{ 'From here you can perform actions on entire group of entries at once.'|trans }}</p>
+  <hr>
+  <button type='button' class='btn p-2 hl-hover-gray lh-normal border-0 my-n2' data-toggle-plus-icon='1' data-action='toggle-next' data-keep-icon='1' title='{{ 'Toggle display'|trans }}' aria-label='{{ 'Toggle display'|trans }}'><i class='fas fa-square-plus fa-fw link-like mr-2'></i>{{ 'Resources categories'|trans }} (<span class='counterValue'>0</span> {{ 'selected'|trans }})</button>
+  <div hidden class='mt-2'>
+  {% for itemsCategory in itemsCategoryArr %}
+    <div class='d-flex justify-content-between p-1 rounded hl-hover-gray'>
+      <label for='batch-itemsTypes-{{ itemsCategory.id }}' class='col-form-label clickable'>{{ itemsCategory.title }}</label>
+      <label class='switch ucp-align'>
+        <input type='checkbox' name='items_types' value='{{ itemsCategory.id }}' autocomplete='off' data-action='update-counter-value' id='batch-itemsTypes-{{ itemsCategory.id }}'>
+        <span class='slider'></span>
+      </label>
+    </div>
+  {% endfor %}
+    </div>
+    <hr>
+
+  <button type='button' class='btn p-2 hl-hover-gray lh-normal border-0 my-n2' data-toggle-plus-icon='1' data-action='toggle-next' data-keep-icon='1' title='{{ 'Toggle display'|trans }}' aria-label='{{ 'Toggle display'|trans }}'><i class='fas fa-square-plus fa-fw link-like mr-2'></i>{{ 'Resources status'|trans }} (<span class='counterValue'>0</span> {{ 'selected'|trans }})</button>
+  <div hidden class='mt-2'>
+  {% for status in itemsStatusArr %}
+    <div class='d-flex justify-content-between p-1 rounded hl-hover-gray'>
+      <label for='batch-itemsStatus-{{ status.id }}' class='col-form-label clickable'>{{ status.title }}</label>
+      <label class='switch ucp-align'>
+        <input type='checkbox' name='items_status' value='{{ status.id }}' autocomplete='off' data-action='update-counter-value' id='batch-itemsStatus-{{ status.id }}'>
+        <span class='slider'></span>
+      </label>
+    </div>
+  {% endfor %}
+    </div>
+
+  <hr>
+  <button type='button' class='btn p-2 hl-hover-gray lh-normal border-0 my-n2' data-toggle-plus-icon='1' data-action='toggle-next' data-keep-icon='1' title='{{ 'Toggle display'|trans }}' aria-label='{{ 'Toggle display'|trans }}'><i class='fas fa-square-plus fa-fw link-like mr-2'></i>{{ 'Experiments categories'|trans }} (<span class='counterValue'>0</span> {{ 'selected'|trans }})</button>
+  <div hidden class='mt-2'>
+  {% for experimentsCategory in experimentsCategoriesArr %}
+    <div class='d-flex justify-content-between p-1 rounded hl-hover-gray'>
+      <label for='batch-experimentsCategories-{{ experimentsCategory.id }}' class='col-form-label clickable'>{{ experimentsCategory.title }}</label>
+      <label class='switch ucp-align'>
+        <input type='checkbox' name='experiments_categories' value='{{ experimentsCategory.id }}' autocomplete='off' data-action='update-counter-value' id='batch-experimentsCategories-{{ experimentsCategory.id }}'>
+        <span class='slider'></span>
+      </label>
+    </div>
+  {% endfor %}
+    </div>
+    <hr>
+
+  <button type='button' class='btn p-2 hl-hover-gray lh-normal border-0 my-n2' data-toggle-plus-icon='1' data-action='toggle-next' data-keep-icon='1' title='{{ 'Toggle display'|trans }}' aria-label='{{ 'Toggle display'|trans }}'><i class='fas fa-square-plus fa-fw link-like mr-2'></i>{{ 'Experiments status'|trans }} (<span class='counterValue'>0</span> {{ 'selected'|trans }})</button>
+  <div hidden class='mt-2'>
+  {% for status in statusArr %}
+    <div class='d-flex justify-content-between p-1 rounded hl-hover-gray'>
+      <label for='batch-experimentsStatus-{{ status.id }}' class='col-form-label clickable'>{{ status.title }}</label>
+      <label class='switch ucp-align'>
+        <input type='checkbox' name='experiments_status' value='{{ status.id }}' autocomplete='off' data-action='update-counter-value' id='batch-experimentsStatus-{{ status.id }}'>
+        <span class='slider'></span>
+      </label>
+    </div>
+  {% endfor %}
+    </div>
+
+  <hr>
+  <button type='button' class='btn p-2 hl-hover-gray lh-normal border-0 my-n2' data-toggle-plus-icon='1' data-action='toggle-next' data-keep-icon='1' title='{{ 'Toggle display'|trans }}' aria-label='{{ 'Toggle display'|trans }}'><i class='fas fa-square-plus fa-fw link-like mr-2'></i>{{ 'Tags'|trans }} (<span class='counterValue'>0</span> {{ 'selected'|trans }})</button>
+  <div hidden class='mt-2'>
+    {% for tag in tagsArr %}
+      <div class='d-flex justify-content-between p-1 rounded hl-hover-gray'>
+        <label for='batch-tags-{{ tag.id }}' class='col-form-label clickable'>{{ tag.tag }}</label>
+        <label class='switch ucp-align'>
+          <input type='checkbox' name='tags' value='{{ tag.id }}' autocomplete='off' data-action='update-counter-value' id='batch-tags-{{ tag.id }}'>
+          <span class='slider'></span>
+        </label>
+      </div>
+    {% endfor %}
+  </div>
+  <hr>
+
+  <button type='button' class='btn p-2 hl-hover-gray lh-normal border-0 my-n2' data-toggle-plus-icon='1' data-action='toggle-next' data-keep-icon='1' title='{{ 'Toggle display'|trans }}' aria-label='{{ 'Toggle display'|trans }}'><i class='fas fa-square-plus fa-fw link-like mr-2'></i>{{ 'Owner'|trans }} (<span class='counterValue'>0</span> {{ 'selected'|trans }})</button>
+  <div hidden class='mt-2'>
+    {% for user in allTeamUsersArr %}
+      <div class='d-flex justify-content-between p-1 rounded hl-hover-gray'>
+        <label for='batch-users-{{ user.userid }}' class='col-form-label clickable'>{{ user.fullname }} ({{ user.email }})</label>
+        <label class='switch ucp-align'>
+          <input type='checkbox' name='users' value='{{ user.userid }}' autocomplete='off' data-action='update-counter-value' id='batch-users-{{ user.userid }}'>
+          <span class='slider'></span>
+        </label>
+      </div>
+    {% endfor %}
+  </div>
+  <hr>
+  </section>
+
+  <div class='row mx-0 mt-3'><p>{{ 'With selected:'|trans }}</p></div>
+  {# First line #}
+  <div class='row mx-0 mb-3'>
+    {# Action buttons #}
+    <button data-action='run-action-selected' data-what='forceLock' type='button' class='btn btn-primary mr-1 mb-2'>{{ 'Lock'|trans }}</button>
+    <button data-action='run-action-selected' data-what='forceUnlock' type='button' class='btn btn-primary mr-1 mb-2'>{{ 'Unlock'|trans }}</button>
+    <button data-action='run-action-selected' data-what='archive' type='button' class='btn btn-secondary mr-1 mb-2'>{{ 'Archive'|trans }}</button>
+    <button data-action='run-action-selected' data-what='destroy' type='button' class='btn btn-danger mr-1 mb-2'>{{ 'Delete'|trans }}</button>
+  </div>
+
+  <h4>{{ 'Set permissions'|trans }}</h4>
+  <div class='row'>
+    <div class='col-md-6 mb-3'>
+      <label for='masscan_select_base'>{{ 'Base'|trans }}</label>
+      <p class='smallgray'>{{ 'This setting sets a baseline upon which you can add more permissions by selecting teams, teamgroups or users below.'|trans }}</p>
+      <select id='masscan_select_base' class='form-control'>
+        {% for key, value in visibilityArr %}
+          <option value='{{ key }}'>{{ value|trans }}</option>
+        {% endfor %}
+      </select>
+      {# TEAMS #}
+      <label for='masscan_select_teams' class='mt-2'>+ {{ 'Teams'|trans }}</label> <p class='smallgray d-inline'>{{ '(hold %sctrl%s key to select multiple entries)'|trans|format('<kbd>', '</kbd>')|raw }}</p>
+      <p class='smallgray'>{{ 'Selecting a team here will give access to all members of this team.'|trans }}</p>
+      <select id='masscan_select_teams' multiple class='form-control' autocomplete='off'>
+        {% for team in teamsArr|filter(t => t.visible == '1') %}
+          <option value='team:{{ team.id }}'>{{ 'Team'|trans }} - {{ team.name }}</option>
+        {% endfor %}
+      </select>
+      {# TEAMGROUPS #}
+      <label for='masscan_select_teamgroups' class='mt-2'>+ {{ 'Teamgroups'|trans }}</label> <p class='smallgray d-inline'>{{ '(hold %sctrl%s key to select multiple entries)'|trans|format('<kbd>', '</kbd>')|raw }}</p>
+      <p class='smallgray'>{{ 'Selecting a teamgroup here will give access to all users part of this teamgroup.'|trans }}</p>
+      <select {{ allTeamgroupsArr|length == 0 ? 'disabled' }} id='masscan_select_teamgroups' multiple class='form-control' autocomplete='off'>
+        {% for tg in allTeamgroupsArr %}
+          <option value='teamgroup:{{ tg.id }}'>{{ 'Teamgroup'|trans }} - {{ tg.name }}</option>
+        {% endfor %}
+      </select>
+      {# USERS #}
+      <label for='masscan_select_users' class='mt-2'>+ {{ 'Users'|trans }}</label> <p class='smallgray d-inline'>{{ 'Allow individual users to access this entry.'|trans }}</p>
+      <ul class='list-group mb-1' id='masscan_list_users'></ul>
+      {# add user to permissions input #}
+      <div class='input-group'>
+        <input id='masscan_select_users' type='text' data-identifier='masscan' data-complete-target='users' class='form-control' placeholder='{{ 'Add user'|trans }}' autocomplete='off'>
+        <div class='input-group-append'>
+          <button class='btn btn-primary' type='button' data-rw='canread' data-identifier='masscan' data-action='add-user-to-permissions'>{{ 'Add'|trans }}</button>
+        </div>
+      </div>
+      <div id='autocompleteAnchorDiv_masscan'></div>
+
+      <hr>
+      {# SAVE AND RESET BUTTONS #}
+      <div class='mt-3'>
+        <button data-action='run-action-selected' type='button' data-what='setcanread' class='btn btn-primary mr-1 mb-2'>{{ 'Set read permissions'|trans }}</button>
+        <button data-action='run-action-selected' type='button' data-what='setcanwrite' class='btn btn-primary mr-1 mb-2'>{{ 'Set write permissions'|trans }}</button>
+      </div>
     </div>
   </div>
 </div>
