--- a/src/templates/export-modal.html
+++ b/src/templates/export-modal.html
@@ -14,7 +14,7 @@
           {# SOURCE #}
           <label class='pl-3'>
           <input class='form-check-input me-1' type='checkbox' checked name='experiments'>
-          {{ 'Experiments'|trans }}
+          {% trans %}Experiment{% plural 2 %}Experiments{% endtrans%}
           </label>
           <label>
           <input class='form-check-input me-1' type='checkbox' name='experiments_templates'>
