--- a/src/templates/show.html
+++ b/src/templates/show.html
@@ -286,8 +286,11 @@
             </div>
           </div>
           {# SAVE AND RESET BUTTONS #}
+          {% if App.Config.configArr.debug -%}
+            <!-- [html-validate-disable wcag/h32] -->
+          {%- endif %}
           <button data-action='save-multi-changes' type='button' class='btn btn-primary mr-1 mb-2'>{{ 'Save'|trans }}</button>
-          <button data-action='clear-form' data-target='multiChangesForm' type='button' class='btn btn-ghost mb-2'>{{ 'Reset'|trans }}</button>
+          <button data-action='clear-form' data-target='multiChangesForm' type='reset' class='btn btn-ghost mb-2'>{{ 'Reset'|trans }}</button>
         </form>
       </div>
 
